# brisbane-crash-ml-lab

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENT_SETUP.md  AUTONOMOUS_AGENT_PROMPT.md  CITATION.cff  LICENSE  Makefile  PROJECT_OVERVIEW.md  README.md  START_HERE.md  pyproject.toml
.cursor/agents/: docs-writer.md  explorer.md  git-historian.md  implementer.md  tester.md
.cursor/rules/: brisbane-crash-ml-lab.mdc
.cursor/skills/brisbane-crash-build/: SKILL.md  reference.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
artifacts/manifests/: build_log.md
configs/: base.yaml  extended.yaml  smoke.yaml  standard.yaml
data/samples/: fixture.csv
docs/: architecture.md  data_dictionary.md  data_provenance.md  experiment_plan.md  model_card.md  release_checklist.md
docs/prs/: 00-environment-setup.md  01-bootstrap.md  02-data-acquisition.md  03-eda-features.md  04-classification.md  05-anomaly-spatial-counts.md  06-reporting-release.md  README.md
notebooks/: 01_data_audit.ipynb  02_eda.ipynb  03_error_analysis.ipynb
reports/: data_quality_summary_smoke.md  data_quality_summary_standard.md
src/crashlab/: __init__.py  cli.py  config.py  logging.py  paths.py  pipeline.py
src/crashlab/app/: __init__.py  (+1 more)
tests/integration/: test_smoke_all_report.py  test_smoke_anomaly_spatial_counts.py  test_smoke_prepare.py  test_smoke_train_binary.py
tests/unit/: test_acquire_network.py  test_acquire_preseed.py  test_anomalies.py  test_champion_selection.py  test_classification_metrics.py  test_clean.py  test_config.py  test_counts.py  test_error_analysis.py  test_hotspots.py  test_leakage.py  test_paths.py  test_reports.py  test_schema.py  test_smoke_training.py  test_splits.py  test_stability.py  test_streamlit_app.py  test_validate.py  test_version.py
(+32 files in other folders)
