[project]
name = "crashlab"
version = "0.1.0"
description = "Brisbane road-crash ML lab (CPU-first, reproducible)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Brisbane Crash ML Lab" }]
dependencies = [
  "pandas>=2.2,<3",
  "pyarrow>=16,<22",
  "scikit-learn>=1.5,<1.8",
  "statsmodels>=0.14,<0.15",
  "scipy>=1.13,<2",
  "numpy>=1.26,<3",
  "requests>=2.32,<3",
  "tenacity>=8.2,<10",
  "pandera>=0.20,<1",
  "joblib>=1.4,<2",
  "matplotlib>=3.9,<4",
  "plotly>=5.22,<7",
  "streamlit>=1.36,<2",
  "typer>=0.12,<1",
  "pyyaml>=6,<7",
  "rich>=13,<15",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
  "types-requests>=2.32,<3",
  "types-PyYAML>=6,<7",
  "pre-commit>=3.7,<5",
  "pandas-stubs>=2.2,<3",
]

[project.scripts]
crashlab = "crashlab.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crashlab"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
  "mypy>=1.10,<2",
  "types-requests>=2.32,<3",
  "types-PyYAML>=6,<7",
  "pre-commit>=3.7,<5",
  "pandas-stubs>=2.2,<3",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/crashlab/evaluation/reports.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
packages = ["crashlab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
